--- a/RedIncovus/RedSocial/bin/RedSocial.dll.config
+++ b/RedIncovus/RedSocial/bin/RedSocial.dll.config
@@ -10,15 +10,29 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
-  <system.web>
+  
+  
+  <system.web>   
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
+
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
+      </namespaces>
+    </pages>
+        
   </system.web>
   <connectionStrings>
-    <add name="RedSocialDB" providerName="System.Data.SqlClient" connectionString="Data Source = 192.168.1.107; Initial Catalog = RedSocial; user id = sa; password = 123456;" />
+    <add name="RedSocialDB" providerName="System.Data.SqlClient" connectionString="Data Source = itserver04; Initial Catalog = RedSocial; user id = sa; password = 1ts3rv3r_live;" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
